fixed wrong color value for color-black

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@
   --color-accent: #dd8b5f;
   --color-text: #ffffff;
   --color-text-secondary: #000000;
-  --color-black: #ababab;
+  --color-black: #000000;
   --color-white: #ffffff;
   /* Light */
   --color-light-background: #ffffff;
